// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Optimizer should optimize 1 1`] = `
{
  "houses": [
    {
      "globalStats": [],
      "handlers": [
        {
          "actions": [
            {
              "amount": "6",
              "mode": "SET",
              "stat": "$$0",
              "type": "CHANGE_STAT",
            },
            {
              "amount": "1",
              "mode": "SET",
              "stat": "$$1",
              "type": "CHANGE_STAT",
            },
            {
              "amount": "%player.$$0%",
              "mode": "INCREMENT",
              "stat": "$$1",
              "type": "CHANGE_STAT",
            },
            {
              "amount": "%player.$$1%",
              "mode": "SET",
              "stat": "$$2",
              "type": "CHANGE_STAT",
            },
            {
              "amount": "4",
              "mode": "DECREMENT",
              "stat": "$$2",
              "type": "CHANGE_STAT",
            },
            {
              "amount": "%player.$$2%",
              "mode": "SET",
              "stat": "$x",
              "type": "CHANGE_STAT",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$x",
        "$$0",
        "$$1",
        "$$2",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Optimizer should optimize 2 1`] = `
{
  "houses": [
    {
      "globalStats": [],
      "handlers": [
        {
          "actions": [
            {
              "amount": "3",
              "mode": "SET",
              "stat": "$$0",
              "type": "CHANGE_STAT",
            },
            {
              "amount": "%player.$$0%",
              "mode": "SET",
              "stat": "$$1",
              "type": "CHANGE_STAT",
            },
            {
              "amount": "3",
              "mode": "INCREMENT",
              "stat": "$$1",
              "type": "CHANGE_STAT",
            },
            {
              "amount": "%player.$$1%",
              "mode": "SET",
              "stat": "$x",
              "type": "CHANGE_STAT",
            },
            {
              "amount": "%player.x%",
              "mode": "SET",
              "stat": "$$2",
              "type": "CHANGE_STAT",
            },
            {
              "amount": "0",
              "mode": "SET",
              "stat": "$$2",
              "type": "CHANGE_STAT",
            },
            {
              "amount": "%player.$$2%",
              "mode": "SET",
              "stat": "$y",
              "type": "CHANGE_STAT",
            },
            {
              "amount": "%player.y%",
              "mode": "SET",
              "stat": "$$3",
              "type": "CHANGE_STAT",
            },
            {
              "amount": "%player.$$3%",
              "mode": "SET",
              "stat": "$z",
              "type": "CHANGE_STAT",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$x",
        "$$0",
        "$$1",
        "$y",
        "$$2",
        "$z",
        "$$3",
      ],
    },
  ],
  "kind": "module",
}
`;
